# hello-rust

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
app/src/generic/: closure.rs  container.rs  copy.rs  cow.rs  generic.rs  hash_map.rs  iterator.rs  mod.rs  mutex_guard.rs  my_add.rs  my_linked_list.rs  my_string.rs  vtable.rs
app/src/lifetime/: lifetime.rs  mod.rs
app/src/owner/: borrow.rs  mod.rs  node.rs
bzlib-sys/: Cargo.toml  build.rs
bzlib-sys/src/: bindings.rs  lib.rs
ffi/: Cargo.toml
ffi/src/: lib.rs  unsafe_1.rs  unsafe_2.rs
generic/: Cargo.toml
generic/benches/: shell_benchmark.rs
generic/src/: lib.rs  main.rs
generic/src/generic/: equation.rs  identifier.rs  mod.rs  plan.rs  shell.rs
httpie/: Cargo.toml
httpie/examples/: json_post.rs
httpie/src/: lib.rs  main.rs
kv1/: Cargo.toml  build.rs
kv1/examples/: client.rs  client_with_tokio_util.rs  dummy_server.rs  new_client.rs  new_dummy_server.rs  old_dummy_server.rs  server.rs  server_with_sleddb.rs  server_with_tokio_util.rs
kv1/src/: error.rs  lib.rs
kv1/src/proto/: abi.rs  mod.rs
kv1/src/service/: command_service.rs  mod.rs  notify.rs
kv1/src/storage/: memory.rs  mod.rs  sleddb.rs
leetcode/src/: lc_169.rs  lc_27.rs  lc_352.rs  lc_80.rs  lc_88.rs  leetcode.rs  lib.rs
queryer/: Cargo.toml  README.md
queryer/examples/: covid.rs  covid_simple.rs  dialect.rs  local.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
rgrep/: Cargo.toml
rgrep/src/: error.rs  main.rs
rgrep/src/parse/: mod.rs  parse.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
share/src/: lib.rs  utils.rs
shared/src/: lib.rs  utils.rs
solid/: Cargo.toml
solid/src/: lib.rs  test1.rs  test2.rs  test2_1.rs  test3.rs  test4.rs
solid/src/test4/: mod.rs  test4.rs  test4_ans.rs
src/: chatroom.rs  fib.rs  func.rs  garden.rs  main.rs
src/garden/: mod.rs  vegetables.rs
src/leetcode/: jindian016.rs
src/pool/: user.rs
src/shape/: base.rs  mod.rs
thumbor/: Cargo.toml  abi.proto  build.rs
thumbor/src/: main.rs
thumbor/src/engine/: image_engine.rs  mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
