[package]
name = "httpie"
version = "0.1.0"
edition = "2024"

[lib]
name = "httpie"

[[bin]]
name = "httpie"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["color", "derive", "cargo"] }
clap-cargo = "0.15.2"
colored = "3.0.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.12.18", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
