[package]
name = "kv1"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
prost = "0.14.1"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.99"
async-prost = "0.4.0"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.14.1"
