[package]
name = "kv1"
version = "0.1.0"
edition = "2024"

[dependencies]
async-prost = "0.4.0"
bytes = "1.10.1"
dashmap = "6.1.0"
http = "1.3.1"
prost = "0.14.1"
thiserror = "2.0.15"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.99"
async-prost = { version = "0.4.0"}
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.14.1"
