[[example]]
name = "dialect"

[[example]]
name = "covid"

[package]
name = "queryer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
polars = { version = "0.33.2", features = ["json", "lazy"] }
reqwest = { version = "0.12.19", features = ["rustls-tls"], default-features = false }
sqlparser = "0.56.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
