[package]
name = "thumbor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
image = "0.25.6"
imageproc = "0.25.0"
lazy_static = "1.5.0"
lru = "0.14.0"
percent-encoding = "2.3.1"
photon-rs = "0.3.3"
prost = "0.13.5"
reqwest = "0.12.18"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.4", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.13.5"
